--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: My WildCat Studios Portfolio description: >-
+title: My WildCat Studios Portfolio 
+description: >-
          This is my portfolio showcasing my projects and skills.
 baseurl: "" # leave empty since this is your user page
-url: "https://Margitlover.github.io" # replace YOURUSERNAME with your GitHub username
-theme: midnight # replace with your chosen theme from the list
+url: "https://margitlover.github.io" # replace YOURUSERNAME with your GitHub username
+theme: jekyll-theme-midnight # replace with your chosen theme from the list
